--- a/style.css
+++ b/style.css
@@ -16,7 +16,11 @@
 }
 body
 {
-	background: lightgrey;
+	width: 100%;
+	background-image: url("./circle.svg");
+	background-repeat: none;
+	background-size: cover;
+	background-position: center;
 	font-family: fut;
 }
 
@@ -41,7 +45,11 @@ body
 }
 
 .contact-right
-{
+{	
+	background-image: url("./blob.svg");
+	background-repeat: none;
+	background-size: 1900px;
+	background-position: top 8000px left 3480px;
 	flex-basis: 50%;
 	padding: 30px;
 	margin-left: 0px;
@@ -86,14 +94,21 @@ input
 	padding-bottom: 5px;
 }
 
+.input1
+{
+	margin-right: 70px;
+	width: 85%;
+}
+
 .input2
 {
-	width: 165%;
+	width: 200%;
 }
 
 .input3
 {
-	width: 165%;
+	width: 200%;
+	padding-bottom: 50px;
 }
 
 ::placeholder
@@ -132,11 +147,12 @@ label
 }
 
 
-.circle
+.line
 {
-	width: 100%;
-	height: 100%;
-	background: yellow;
-	position: static;
-	clip-path: circle(600px at center);
+	border-left: 2px solid darkgrey;
+	height: 200px;
+	left: 50%;
+	top: -50%;
+	margin-top: 230px;
+	margin-left: 120px;
 }
